# dotfiles

./: .ackrc  .bash_aliases  .bashrc  .cvsignore  .dircolors  .ghci  .gitconfig  .gitignore  .gitmodules  .goobookrc  .inputrc  .mailcap  .muttrc  .nethackrc  .offlineimaprc  .tmux.conf  .vimrc  Xresources  __pre-commit  ackrc  bash_aliases  bash_login  bashrc  bugs  coffeelint.json  ctags  cvsignore  cvsrc  default.nix  deploy.sh  dircolors  dput.cf  extract_urlview  ghci  gitconfig  goobookrc  ignore  inputrc  jshintrc  mailcap  (+10 more)
nixos/mods/beyboard/: .gitignore  beyboard.cabal  default.nix  shell.nix
nixos/mods/beyboard/app/: Main.hs
vim/: IN.in.vim  account-completion.vim  coc-settings.json  dvorak-fuckups.vim  filetype.vim  hledger-main-journal.vim  log-timestamp.hs  shifted_fkeys.vim  timestamp.hs  vim-tools.cabal  yesod.vim
vim/UltiSnips/: haskell.snippets  in.snippets  sql.snippets  xhtml.snippets
vim/after/ftplugin/: cabal.vim  haskell.vim  html.vim  in.vim  journal.vim  ledger.vim  mail.vim  markdown.vim  nix.vim  org.vim  sh.vim  vim.vim  yaml.vim
vim/after/indent/: javascript.vim
vim/after/plugin/: abolish.vim  coc.nvim.vim  copilot.vim  fzf.vim  passhole.vim
vim/after/syntax/: html.vim  lhaskell.vim  org.vim  rst.vim
vim/autoload/: hledger.vim
vim/compiler/: elm.vim  ghc.vim  hlint.vim  nix.vim  stack.vim  tidy.vim
vim/ftdetect/: journal.vim  logtxt.vim
vim/ftplugin/: ledger.vim  logtxt.vim  org.vim
vim/pack/ALL/start/: passhole  vim  vim-nix  vimin
vim/pack/start/start/: simple-md
vim/plugin/: and-so-on.vim  diffem.vim  nexttag.vim  typewriter.vim
vim/skel/: html  html.hs  skel.sh
vim/spell/: en.utf-8.add  en.utf-8.add.spl
vim/syntax/: logtxt.vim
vim/test/: test_hledger.vim
(+230 files in other folders)
